--- a/backend/composer.json
+++ b/backend/composer.json
@@ -54,6 +54,9 @@
     },
     "extra": {
         "laravel": {
+            "providers": [
+                "App\\Providers\\ScheduleServiceProvider"
+            ],
             "dont-discover": []
         }
     },
