--- a/frontend/.env
+++ b/frontend/.env
@@ -2,4 +2,4 @@
 # The data added here will be propagated to the client
 # example:
 # PORT=8080
-API_URL=http://127.0.0.1:8000/
+API_URL=http://127.0.0.1:8000/api/
