--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "@quasar/extras": "^1.16.4",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "lodash": "^4.17.21",
     "pinia": "^2.2.4",
+    "qs": "^6.13.0",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
