--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME="Matat Task"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:hSUeWw19uMViSoqHycGK7863xMJxjQgptx4UYGmSSHI=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=matat_task
+DB_USERNAME=root
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -64,3 +64,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+WOOCOMMERCE_API_URL=https://interview-test.matat.io/wp-json/wc/v3/
+WOOCOMMERCE_CONSUMER_KEY=ck_40d0806b16feb3bd67a4d8dbbff163c6dfcf061d
+WOOCOMMERCE_CONSUMER_SECRET=cs_9544e30809595750f8f1c6f3f9a6efcc38bfd06d
